--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "I’m John Peart. I’m a policy professional with an interest in 
 author: "John Peart"
 
 baseurl: "/email-signatures" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000"
+url: "https://www.johnpe.art"
 
 ####################
 # Feature settings #
